--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Leckerli+One&family=Sanchez:ital@0;1&display=swap');
+/*font-family: 'Averia Serif Libre', cursive;
+font-family: 'Leckerli One', cursive;
+font-family: 'Sanchez', serif;*/
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  padding:0;
+  font-family: 'Sanchez', BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -10,4 +17,24 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+#root{
+  min-height:100vh;
+  display:flex;
+  flex-direction:column;
+
+}
+header{
+  height:36vh;
+  background-color: #355B6D;
+  display:flex;
+  flex-direction:column;
+}
+main{
+  flex-grow:1;
+}
+nav a{
+  color:white;
+  text-decoration:none;
+  font-size:18px;
 }
