--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -9,10 +9,21 @@
 .logo{
    border-bottom:1px solid white;
    border-top: 1px solid white;
+   display:flex;
+   justify-content:center;
+   align-items:center;
+   gap:10px;
 }
 .logo p{
     color:white;
     font-family: 'Leckerli One', cursive;
     font-size:18px;
+}
+.logoImg{
+ width:34px;
+}
+.logoImg img{
+width:100%;
+border-radius:5px;
 }
 
