--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,12 @@ nav a{
   text-decoration:none;
   font-size:18px;
 }
+footer{
+ height:40px;
+ border-top:1px solid #355B6D;
+ display:flex;
+ flex-direction:column;
+ justify-content:center;
+ align-items:center;
+
+}
