--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -58,7 +58,7 @@
 .searchInputLogo{
     border:1px solid white;
     background-color:white;
-    width:140px;
+    width:60px;
     height:70px;
     border-top-right-radius:10px;
     border-bottom-right-radius:10px;
@@ -79,6 +79,18 @@
     top:28px;
     left:10px;
 }
+.inputRegionIconsCross{
+    padding:5px;
+    background-color:#355B6D;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    position: absolute;
+    top:24px;
+    left:10px;
+    border-radius:50%;
+    cursor:pointer;
+}
 .dropDown{
     position: relative;
 }
@@ -87,6 +99,9 @@
     background-color:white;
     top:62px;
     width:300px;
+    max-height:260px;
+    overflow:hidden;
+    overflow-y:auto;
     -webkit-box-shadow: 0.5px 5.5px 8px -3.5px #010101;
     -moz-box-shadow: 0.5px 5.5px 8px -3.5px #010101;
     box-shadow: 0.5px 5.5px 8px -3.5px #010101; 
@@ -106,4 +121,29 @@
 }
 .inputRegionVisible ul li:hover, .inputDeptVisible ul li:hover, .inputComVisible ul li:hover{
     background-color:gray;
+}
+.CardPresentationContainer{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    max-width:680px;
+    margin: 40px auto;
+    border-radius:5px;
+}
+.logoDentistsList{
+    width:50px;
+    height:50px;
+    margin:auto;
+}
+.logoDentistsList img{
+    width:100%;
+    border-radius:5px;
+}
+.dentistsListContainer{
+    display:flex;
+    flex-direction:column;
+    gap:30px;
+    max-width:1000px;
+    margin: 40px auto;
 }
