--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -147,3 +147,20 @@
     max-width:1000px;
     margin: 40px auto;
 }
+.CardPresentationContainerLoading{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    max-width:680px;
+    margin: 40px auto;
+    border-radius:5px;
+    position:relative;
+    background-color:rgba(0,0,0,0.5);
+}
+.CardOverlayLoading{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
