--- a/src/Components/Dentists/CardPresentation/CardPresentation.module.css
+++ b/src/Components/Dentists/CardPresentation/CardPresentation.module.css
@@ -36,3 +36,26 @@ text-align:center;
 .paragraphes p span{
 font-weight:bold;
 }
+@media only screen and (max-width:750px){
+  .title h1{
+    font-size:20px;
+    }
+    .paragraphes p{
+      font-size:14px;
+    }
+
+}
+@media only screen and (max-width:480px){
+  .title h1{
+    font-size:16px;
+    }
+    .paragraphes p{
+      font-size:12px;
+    } 
+    .img{
+      margin-top:30px;
+      width:320px;
+      height:320px;
+      border-radius:5px;
+    } 
+}
