--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -68,16 +68,23 @@
 }
 .inputWhereContainer{
     position: relative;
+    display:flex;
 }
 .inputWhereIcons{
     position: absolute;
     top:28px;
     right:10px;
 }
+.inputWhereIconsCom{
+    position: absolute;
+    top:28px;
+    left:280px;
+   
+}
 .inputWhereIconsMap{
     position: absolute;
     top:28px;
-    left:10px;
+    left:20px;
 }
 .inputRegionIconsCross{
     padding:5px;
@@ -163,4 +170,32 @@
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
+}
+@media only screen and (max-width:1080px){
+    .searchContainer{
+        height:60vh;
+       
+      }
+      .searchInput{
+        width:90%;
+        display:flex;
+        flex-direction:column;
+        gap:100px;
+    } 
+    .inputRegion{
+        border-radius:10px;
+    }
+    .inputDept{
+        border-radius:10px;
+    }
+    
+    .inputRegionVisible , .inputDeptVisible, .inputComVisible {
+        max-height:100px;
+    }
+    .inputWhere{
+        border-top-left-radius:10px;
+        border-bottom-left-radius:10px;
+  
+     }
+
 }
